--- a/waypointhealth-auth-app/Dockerfile
+++ b/waypointhealth-auth-app/Dockerfile
@@ -1,8 +1,16 @@
 FROM torukmnk/ruby-mongo
 
+COPY .ruby-gemset /tmp/
+COPY .ruby-version /tmp/
+COPY Gemfile* /tmp/
+WORKDIR /tmp
+
+RUN /bin/bash -l -c 'rvm current'
+RUN /bin/bash -l -c bundle install
+
+ENV HOST "192.168.99.100"
 RUN mkdir /waypointhealth_auth
 WORKDIR /waypointhealth_auth
 ADD . /waypointhealth_auth
 
-RUN /bin/bash -l -c "bundle install"
-EXPOSE 3001
+EXPOSE 3000
