--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,7 @@ services:
     build: ./waypointhealth-auth-app
     environment:
       - RAILS_ENV=development
-      - MONGODB_HOST="192.168.99.100:27017"
-    command: bash -l -c "rake db:drop; rake db:seed; rails s -p 3000 -b 0.0.0.0"
+    command: bash -l -c "rake db:drop; rake db:seed; bundle exec puma --port 3000 -b tcp://0.0.0.0"
     ports:
       - "3000:3000"
     expose:
@@ -33,7 +32,6 @@ services:
     links:
       - db
       - redis
-      - waypointhealth_main
     extra_hosts:
       - "btsteps.dev:192.168.99.100"
 
@@ -41,8 +39,7 @@ services:
     build: ./waypointhealth-main-app
     environment:
       - RAILS_ENV=development
-      - MONGODB_HOST="192.168.99.100:27017"
-    command: bash -l -c "sleep 2; rake db:drop; mongorestore -h 192.168.99.100:27017 --db thrive_development mongodb-last; rake db:seed; rails s -p 3001 -b 0.0.0.0"
+    command: bash -l -c "sleep 2; rake db:drop; mongorestore -h 192.168.99.100:27017 --db thrive_development mongodb/thrive_preview; rake db:seed; bundle exec puma --port 3001 -b tcp://0.0.0.0"
     ports:
       - "3001:3001"
     expose:
@@ -52,6 +49,6 @@ services:
     links:
       - db
       - redis
+      - waypointhealth_auth
     extra_hosts:
       - "btsteps.dev:192.168.99.100"
-
